Fixed bug with server highlighting not showing up if clicking in wrong spot

--- a/app/assets/stylesheets/components/server.scss
+++ b/app/assets/stylesheets/components/server.scss
@@ -2,6 +2,10 @@
 
 .link-to-server {
     text-decoration: none;
+    width: 50px;
+    height: 50px;
+    left: 10px;
+    border-radius: 50%;
 }
 
 .link-to-server:hover {
